BACKEND/full_err.txt
[dotenv@17.3.1] injecting env (9) from .env -- tip: ΓÜÖ∩╕Å  enable debug logging with { debug: true }
[dotenv@17.3.1] injecting env (0) from .env -- tip: ΓÜÖ∩╕Å  write to custom object with { processEnv: myObject }
[dotenv@17.3.1] injecting env (0) from .env -- tip: ≡ƒöÉ prevent committing .env to code: https://dotenvx.com/precommit
[dotenv@17.3.1] injecting env (0) from .env -- tip: ≡ƒ¢á∩╕Å  run anywhere with `dotenvx run -- yourcommand`
node : C:\Users\sahil\V
ideos\Code with 
Sahil\coding\HakaTeam P
roject\Hackathon-1\Dopp
elganger\BACKEND\contro
llers\userController.js
:4
At line:1 char:1
+ node server.js 2>&1 
| Out-File -FilePath 
full_err.txt -Encoding 
utf8
+ ~~~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\sahi   
 l\...Controller.js    
:4:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
const db = require('../
config/db');
      ^

SyntaxError: 
Identifier 'db' has 
already been declared
    at wrapSafe (node:i
nternal/modules/cjs/loa
der:1638:18)
    at Module._compile 
(node:internal/modules/
cjs/loader:1680:20)
    at Object..js (node
:internal/modules/cjs/l
oader:1839:10)
    at Module.load (nod
e:internal/modules/cjs/
loader:1441:32)
    at Function._load (
node:internal/modules/c
js/loader:1263:12)
    at TracingChannel.t
raceSync (node:diagnost
ics_channel:328:14)
    at wrapModuleLoad (
node:internal/modules/c
js/loader:237:24)
    at Module.require (
node:internal/modules/c
js/loader:1463:12)
    at require (node:in
ternal/modules/helpers:
147:16)
    at 
Object.<anonymous> (C:\
Users\sahil\Videos\Code
 with 
Sahil\coding\HakaTeam P
roject\Hackathon-1\Dopp
elganger\BACKEND\routes
\userRoutes.js:3:40)

Node.js v22.21.1
